# Spaceship-Titanic

./: Dockerfile  README.md  app.py  calculate_MAE.py  create_file.py  learn_model.py  main.py  my-model.skops  proceccing.py  pyproject.toml  training.py
Kosmo_titan/spaceship-titanic/: ans.csv
