[tool.poetry]
name = "learn-ii"
version = "0.1.0"
description = ""
authors = ["Дмитрий Туминов <d.tuminov1@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
psycopg2-binary = {version = "^2.9.9", extras = ["postgres"]}
mysql-connector-python = {version = "^9.0.0", extras = ["mysql", "database"]}
uvicorn = "^0.30.6"
pydantic = "^2.8.2"
skops = "^0.10.0"
catboost = "^1.2.5"
numpy = "^1.26.4"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
